@@ -17,11 +17,12 @@ import com.facebook.presto.parquet.DataPage;
 import com.facebook.presto.parquet.DataPageV1;
 import com.facebook.presto.parquet.DataPageV2;
 import com.facebook.presto.parquet.DictionaryPage;
+import io.airlift.slice.Slice;
 import org.apache.parquet.hadoop.metadata.CompressionCodecName;
+import org.apache.parquet.internal.column.columnindex.OffsetIndex;
 
 import java.io.IOException;
 import java.util.LinkedList;
-import java.util.List;
 
 import static com.facebook.presto.parquet.ParquetCompressionUtils.decompress;
 import static java.lang.Math.toIntExact;
@@ -30,21 +31,38 @@ public class PageReader
 {
     private final CompressionCodecName codec;
     private final long valueCount;
-    private final List<DataPage> compressedPages;
+    private final LinkedList<DataPage> compressedPages;
     private final DictionaryPage compressedDictionaryPage;
+    private final OffsetIndex offsetIndex;
+    private int pageIndex;
+
+    /**
+     * @param compressedPages This parameter will be mutated destructively as {@link DataPage} entries are removed as part of {@link #readPage()}. The caller
+     * should not retain a reference to this list after passing it in as a constructor argument.
+     */
+    public PageReader(CompressionCodecName codec,
+            LinkedList<DataPage> compressedPages,
+            DictionaryPage compressedDictionaryPage)
+            throws IOException
+    {
+        this(codec, compressedPages, compressedDictionaryPage, null);
+    }
 
     public PageReader(CompressionCodecName codec,
-            List<DataPage> compressedPages,
-            DictionaryPage compressedDictionaryPage)
+                      LinkedList<DataPage> compressedPages,
+                      DictionaryPage compressedDictionaryPage,
+                      OffsetIndex offsetIndex)
     {
         this.codec = codec;
-        this.compressedPages = new LinkedList<>(compressedPages);
+        this.compressedPages = compressedPages;
         this.compressedDictionaryPage = compressedDictionaryPage;
         int count = 0;
         for (DataPage page : compressedPages) {
             count += page.getValueCount();
         }
         this.valueCount = count;
+        this.offsetIndex = offsetIndex;
+        this.pageIndex = 0;
     }
 
     public long getTotalValueCount()
@@ -57,14 +75,18 @@ public class PageReader
         if (compressedPages.isEmpty()) {
             return null;
         }
-        DataPage compressedPage = compressedPages.remove(0);
+        DataPage compressedPage = compressedPages.removeFirst();
         try {
+            long firstRowIndex = getFirstRowIndex(pageIndex, offsetIndex);
+            pageIndex = pageIndex + 1;
             if (compressedPage instanceof DataPageV1) {
                 DataPageV1 dataPageV1 = (DataPageV1) compressedPage;
+                Slice slice = decompress(codec, dataPageV1.getSlice(), dataPageV1.getUncompressedSize());
                 return new DataPageV1(
-                        decompress(codec, dataPageV1.getSlice(), dataPageV1.getUncompressedSize()),
+                        slice,
                         dataPageV1.getValueCount(),
                         dataPageV1.getUncompressedSize(),
+                        firstRowIndex,
                         dataPageV1.getStatistics(),
                         dataPageV1.getRepetitionLevelEncoding(),
                         dataPageV1.getDefinitionLevelEncoding(),
@@ -78,14 +100,16 @@ public class PageReader
                 int uncompressedSize = toIntExact(dataPageV2.getUncompressedSize()
                         - dataPageV2.getDefinitionLevels().length()
                         - dataPageV2.getRepetitionLevels().length());
+                Slice slice = decompress(codec, dataPageV2.getSlice(), uncompressedSize);
                 return new DataPageV2(
                         dataPageV2.getRowCount(),
                         dataPageV2.getNullCount(),
                         dataPageV2.getValueCount(),
+                        firstRowIndex,
                         dataPageV2.getRepetitionLevels(),
                         dataPageV2.getDefinitionLevels(),
                         dataPageV2.getDataEncoding(),
-                        decompress(codec, dataPageV2.getSlice(), uncompressedSize),
+                        slice,
                         dataPageV2.getUncompressedSize(),
                         dataPageV2.getStatistics(),
                         false);
@@ -110,5 +134,10 @@ public class PageReader
         catch (IOException e) {
             throw new RuntimeException("Error reading dictionary page", e);
         }
+    }
+
+    public static long getFirstRowIndex(int pageIndex, OffsetIndex offsetIndex)
+    {
+        return offsetIndex == null ? -1 : offsetIndex.getFirstRowIndex(pageIndex);
     }
 }
